--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -21,4 +21,4 @@ jobs:
       name: Upload the binary
       with:
         name: free-0.1-${{ github.run_number }}
-        path: ${{ github.workspace }}/publish/*
+        path: ./free
